# quantum-shield

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml
benches/: codec.rs  crypto.rs
ci/no_std_check/: Cargo.toml
ci/no_std_check/.cargo/: config.toml
ci/no_std_check/src/: lib.rs
docs/: README.md  algorithms.md  api-reference.md  architecture.md  contributing.md  design.md  faq.md  gap-matrix.md  getting-started.md  migration-guide.md  migration-v1-to-v2.md  performance.md  security-improvements.md  security-model.md  use-cases.md  user-guide.md  why-quantum-resistant.md
examples/: basic_usage.rs  dudect.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: envelope_from_bytes.rs  multi_from_bytes.rs  public_bundle_from_bytes.rs  public_bundle_from_pem.rs  rotation_from_bytes.rs  roundtrip_seal_open.rs  roundtrip_sign_verify.rs  secret_from_bytes.rs  signature_from_bytes.rs  stream_parse.rs
src/: api.rs  constants.rs  crypto.rs  error.rs  hybrid_kem.rs  keys.rs  lib.rs  multi.rs  pem.rs  rotate.rs  seal.rs  security.rs  serde_impls.rs  sign.rs  stream.rs  types.rs  wire.rs
tests/: downgrade.rs  golden.rs  kat_ed25519.rs  kat_mldsa.rs  kat_mlkem.rs  kat_x25519.rs  multi.rs  proptests.rs  rotate.rs  roundtrip.rs  security_tests.rs  stream.rs  tamper.rs
tests/data/: envelope_v2.hex
