[package]
name = "quantum-shield"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
authors = ["valh4x"]
description = "Hybrid post-quantum cryptography: X25519 + ML-KEM-1024 encryption and Ed25519 + ML-DSA-87 signatures"
license = "MIT"
repository = "https://github.com/redasgard/quantum-shield"
keywords = ["cryptography", "post-quantum", "ml-kem", "ml-dsa", "hybrid"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
ml-kem = { version = "0.3.2", features = ["zeroize", "getrandom"] }
ml-dsa = { version = "0.1.1", features = ["zeroize"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["std", "fast", "zeroize"] }
aes-gcm = "0.11"
sha3 = "0.12"
getrandom = "0.4"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
thiserror = "2"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
hex = "0.4"
hex-literal = "1"
ml-kem = { version = "0.3.2", features = ["hazmat"] }
proptest = "1"
serde_json = "1"

[features]
default = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
