[package]
name = "quantum-shield"
version = "0.2.1"
edition = "2021"
rust-version = "1.85"
authors = ["valh4x"]
description = "Hybrid post-quantum cryptography: X25519 + ML-KEM-1024 encryption and Ed25519 + ML-DSA-87 signatures"
license = "MIT"
repository = "https://github.com/redasgard/quantum-shield"
keywords = ["cryptography", "post-quantum", "ml-kem", "ml-dsa", "hybrid"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
ml-kem = { version = "0.3.2", default-features = false, features = ["alloc", "zeroize", "getrandom"] }
ml-dsa = { version = "0.1.1", default-features = false, features = ["alloc", "zeroize"] }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["alloc", "fast", "zeroize"] }
aes-gcm = { version = "0.11", default-features = false, features = ["aes", "alloc"] }
sha3 = { version = "0.12", default-features = false }
getrandom = "0.4"
zeroize = { version = "1.8", default-features = false, features = ["derive", "alloc"] }
subtle = { version = "2.6", default-features = false }
thiserror = { version = "2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
criterion = { version = "0.7.0", default-features = false, features = ["cargo_bench_support"] }
dudect-bencher = "0.7.0"
hex = "0.4"
hex-literal = "1"
ml-kem = { version = "0.3.2", features = ["hazmat"] }
proptest = "1"
serde_json = "1"

[features]
default = ["std"]
# `std` enables `std::error::Error` for the error type and the std-specific
# features of dependencies. Disable it (`--no-default-features`) for a
# `no_std` + `alloc` build. `alloc` is always required.
std = ["thiserror/std", "ed25519-dalek/std", "serde?/std"]
serde = ["dep:serde"]

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "codec"
harness = false

# The constant-time harness is a dudect-bencher example (run manually:
# `cargo run --release --example dudect`), not a criterion bench.
[[example]]
name = "dudect"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
